# RequirementSpace-Workbench

./: .env.example  .gitattributes  .gitignore  README.md  RequirementSpace_Workbench_Development_Plan.md  RequirementSpace_Workbench_Development_Plan_v2.md  RequirementSpace_Workbench_当前实现说明.md  alembic.ini  analysis_report.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  需求空间IR设计.md
alembic/: env.py
alembic/versions/: 17a84a5d6e8c_add_ai_add_sessions_and_ai_add_messages.py  20260528_233052_add_issue_repair_drafts.py  20260529_002118_add_choice_group_source_fields.py  20260529_021500_add_issue_overrides.py  20260529_220000_add_confirmation_status_to_models.py  20260530_110000_extend_choice_groups_for_generation.py  20260626_000001_add_confirmation_status_to_attribute_and_flow_step.py  2a3d8257d849_add_project_members.py  45e92af4340f_add_finding_overrides.py  57970a473607_initial_schema_with_generative_drafts.py  57a2677fc6b9_add_locale_fields.py  5f9983ca9bb2_add_knowledge_enabled_to_strategy_.py  7c2e9b85646a_add_project_generation_strategy_configs.py  8d2f4c9a1b7e_make_project_llm_config_project_unique.py  92880adaf486_add_collaboration_tasks.py  b70f9aebbd6f_bootstrap_phase5.py  e91dee28418b_add_object_status_to_models.py  f1456cb4b2eb_extend_audit_logs_actor_context.py  f99c330dbebe_add_knowledge_base.py
api/: index.py
backend/: main.py  requirements.txt  schemas.py
backend/api/: __init__.py  base_schema.py  bootstrap.py
backend/app/: crud.py  database.py  main.py  models.py  schemas.py  seed.py
backend/core/: __init__.py  actor_context.py  ai_operation_monitor.py  config.py  issue_capabilities.py  llm_context.py  llm_language_protocol.py  llm_locale_validation.py  llm_protected_inputs.py  locale.py  localized_messages.py  notifier.py  prompt_resolver.py  rules.py
backend/database/: __init__.py  database.py  model.py
backend/integration/feature-tree-skill/: MANIFEST.in  README.md  main_FT.py  pyproject.toml
backend/integration/feature-tree-skill/examples/: actors.txt  raw_requirement.txt
backend/integration/feature-tree-skill/feature_tree_skill/: cli.py  core.py
backend/integration/feature-tree-skill/feature_tree_skill/resources/config/: config.json
backend/integration/feature-tree-skill/feature_tree_skill/resources/prompts/: NL2Features.txt  NLActors2Features.txt
backend/integration/feature-tree-skill/outputs/: features.json
backend/integration/ft-feedback-skill/: MANIFEST.in  README.md  main_FT_feedback.py  pyproject.toml
backend/integration/ft-feedback-skill/examples/: feature_tree.json  feedback.txt
backend/integration/ft-feedback-skill/feature_tree_feedback_skill/: cli.py  core.py
backend/integration/ft-feedback-skill/feature_tree_feedback_skill/resources/config/: config.json
backend/integration/ft-feedback-skill/feature_tree_feedback_skill/resources/prompts/: FeatureTreeFeedback2Features.txt
backend/integration/ft-feedback-skill/outputs/: features.json
backend/integration/gherkin-code-skill/: MANIFEST.in  README.md  gerkin2code_main.py  pyproject.toml
backend/integration/gherkin-code-skill/examples/: acceptance_criteria.json
backend/integration/gherkin-code-skill/gherkin2code_skill/: __init__.py  cli.py  core.py
backend/integration/gherkin-code-skill/gherkin2code_skill/resources/config/: config.json
backend/integration/gherkin-code-skill/gherkin2code_skill/resources/prompts/: gherkin2code.txt
backend/integration/gherkin-code-skill/output/: index.html  script.js  style.css
backend/integration/kano-skill/: MANIFEST.in  README.md  main_kano.py  pyproject.toml
backend/integration/kano-skill/examples/: feature_tree.json  requirement.txt
backend/integration/kano-skill/kano_skill/: cli.py  core.py
backend/integration/kano-skill/kano_skill/resources/config/: config.json
backend/integration/kano-skill/kano_skill/resources/prompts/: User_information.txt  User_perference.txt  User_satisfaction.txt  reasons_sum.txt
backend/integration/kano-skill/output/: feature_satisfaction_reasons.json
backend/integration/scenario-feedback-skill/: MANIFEST.in  README.md  main_SF.py  pyproject.toml
backend/integration/scenario-feedback-skill/examples/: gherkin.json  user_feedback.txt
backend/integration/scenario-feedback-skill/scenario_feedback_skill/: cli.py  core.py
backend/integration/scenario-feedback-skill/scenario_feedback_skill/resources/config/: config.json
backend/integration/scenario-feedback-skill/scenario_feedback_skill/resources/prompts/: feedback2Gherkin.txt
backend/integration/scenario-generation-skill/: .gitignore  LICENSE  MANIFEST.in  README.md  main_SG.py  pyproject.toml
backend/integration/scenario-generation-skill/examples/: raw_requirement.txt
backend/integration/scenario-generation-skill/scenario_generation_skill/: __init__.py  cli.py  core.py
backend/integration/scenario-generation-skill/scenario_generation_skill/resources/config/: config.json
backend/integration/scenario-generation-skill/scenario_generation_skill/resources/prompts/: Features2Story.txt  Story2Sys.txt  sys2Gherkin.txt
backend/integration/spl-syntax-export-skill/: README.md  pyproject.toml
backend/integration/spl-syntax-export-skill/spl_syntax_export_skill/: __init__.py  cli.py  core.py  renderer.py  schema.py
backend/services/: LLM_service.py  (+2 more)
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
scratch/: check_ctx.py  debug_hardening_leak.py  debug_log_capture.py  dump_all_zh_prompts.py  dump_business_objects_actors_label.py  dump_zh_prompts.py  find_context_leak.py  find_prompt_usages.py  fix_llm_logging_tests.py  fix_llm_logging_tests_nested.py  localize_filler_prompts.py  localize_issue_prompts.py  localize_perceptron_prompts.py  localize_single_prompts.py  run_logging_test.py  write_en_prompts.py
前端草稿/: lite_page_01_integrated_draft_exploration_v_0_1.jsx  lite_page_02_integrated_draft_exploration_v_0_1.jsx  lite_page_03_integrated_draft_exploration_v_0_1.jsx  lite_page_04_integrated_draft_exploration_v_0_1.jsx  lite_page_05_integrated_draft_exploration_v_0_1.jsx
(+822 files in other folders)
