[project]
name = "requirementspace-workbench"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
  "fastapi==0.136.1",
  "uvicorn[standard]==0.47.0",
  "pydantic==2.13.4",
  "SQLAlchemy==2.0.49",
  "aiosqlite==0.22.1",
  "alembic==1.18.4",
  "httpx==0.28.1",
  "openai>=1.56.0,<2.0",
  "python-dotenv==1.2.2",
  "dataclasses-json==0.6.7",
  "inflection==0.5.1",
  "matplotlib==3.9.4",
  "tzdata==2026.2"
]

[project.scripts]
app = "backend.main:app"