[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scenario-feedback-skill"
version = "0.1.0"
description = "Revise Gherkin scenarios from user feedback and existing Gherkin content."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
  {name = "Your Name"}
]
keywords = ["requirements", "gherkin", "feedback", "openai", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]
dependencies = [
  "openai>=1.56.0"
]

[project.scripts]
scenario-feedback-skill = "scenario_feedback_skill.cli:main"
sf-skill = "scenario_feedback_skill.cli:main"

[tool.setuptools.packages.find]
include = ["scenario_feedback_skill*"]

[tool.setuptools.package-data]
scenario_feedback_skill = ["resources/config/*.json", "resources/prompts/*.txt"]
