[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spl-syntax-export-skill"
version = "0.1.0"
description = "Deterministic code-based syntax wrapper export to SPL"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
  {name = "Your Name"}
]
keywords = ["requirements", "spl", "dsl", "export"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = []

[tool.setuptools.packages.find]
include = ["spl_syntax_export_skill*"]
